# 15-puzzle

./: README.md  setup.cfg
mystic/: __main__.py  solver.py  square.py
