[metadata]
name = mystic
version = 1.0.0
description = A* solver for the mystic square 
author = Julien Castiaux
author-email = julien.castiaux@gmail.com
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Julien00859/15-puzzle
license = MIT
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only

[options]
packages = mystic
